# presage

./: Cargo.toml  README.md
examples/todo/: Cargo.toml
examples/todo/src/: app.rs  configuration.rs  error.rs  main.rs  persistence.rs
examples/todo/src/todo/: commands.rs  events.rs  mod.rs  views.rs
macros/: Cargo.toml
macros/src/: lib.rs  utils.rs
macros/src/command/: command_handler.rs  derive_command.rs  mod.rs
macros/src/event/: derive_aggregate_event.rs  derive_event.rs  event_handler.rs  mod.rs
src/: aggregate.rs  command.rs  command_bus.rs  configuration.rs  error.rs  event.rs  lib.rs
